# coppeliasim-LBR-iiwa-14R820-visual-servo-control-and-obstacle-avoidance

./: .gitignore  LICENSE  README.md  commit.logs  main.py  pyproject.toml  pytest.ini  requirements.txt
configs/: README.md
configs/app/: benchmark.yaml  experiment.yaml  pbvs_official.yaml  pbvs_pyplot.yaml  ros2.yaml  simulation.yaml
configs/controllers/: adaptive_joint_pd.yaml  joint_pd.yaml
configs/experiments/: benchmark_pd_vs_adaptive.yaml  joint_trajectory_baseline.yaml  pbvs_person_tracking.yaml  pbvs_with_avoidance.yaml
configs/obstacle_avoidance/: cuckoo_search.yaml
configs/perception/: aruco_yolo.yaml  yolo.yaml
configs/scenarios/: pbvs_aruco_scene.yaml  person_in_workspace.yaml  pick_place_sim.yaml
configs/visual_servoing/: pbvs.yaml
control/trajectory/: joint_trajectory.py  profiles.py
demos/: avoidance_demo.py  pbvs_demo.py  tracking_demo.py
examples/adapters/: example_joint_trajectory_in_simulation.py  example_pbvs_with_aruco_in_simulation.py  example_person_detection_adapter_pipeline.py
examples/application/: example_benchmark_controllers.py  example_run_joint_trajectory.py  example_run_pbvs.py  example_run_pbvs_with_avoidance.py  example_run_pbvs_with_tracking.py
examples/apps/: example_experiment_app.py  example_ros2_bridge_app.py  example_simulation_app.py
examples/contracts/: example_fake_clock_results.py  example_fake_robot_and_camera.py
examples/control/: example_joint_pd_step_response.py
examples/decision/: example_pbvs_with_avoidance_pipeline.py
examples/infrastructure/: example_load_config.py  example_load_config_execute_and_persist.py  example_results_repository.py  example_run_logger.py
examples/perception_estimation/: example_person_state_estimation.py
examples/planning/: example_time_parameterization.py
examples/robot_model/: example_jacobian.py
examples/runtime/: _mocks.py  example_fake_runtime_cycle.py  example_fake_runtime_multiple_steps.py  example_runtime_with_mock_results.py
examples/tracking/: example_association_policy.py  example_detection_sequence_to_tracks.py  example_track_lifecycle.py
examples/types/: example_planning_and_control.py  example_robot_state.py  example_vision_types.py
experiments/: README.md
experiments/components/: cuboids_test.py  structure_test.py
experiments/configs/: benchmark_pd_vs_adaptive_protocol.yaml  pbvs_with_avoidance_protocol.yaml
experiments/figures/: README.md
experiments/notebooks/: README.md  analyze_results.py  initial_analysis.ipynb
experiments/scenarios/: controller_benchmark.yaml  person_in_workspace.yaml
experiments/trajectory/: cartesian_motion_test.py  inverse_kinematics_test.py  joint_motion_test.py
legacy/: 2.test_visionSolvePnP.py  main.py
legacy/experiments/: __init__.py
legacy/robot/: __init__.py
legacy/utils/: experiment.py  logging_config.py
legacy/vision/: color_filters.py  gui.py
manipulator_framework/: main.py
manipulator_framework/config/: _parsing.py  controller_config.py  experiment_config.py  persistence_config.py  robot_config.py  simulation_config.py  task_config.py  vision_config.py
manipulator_framework/infrastructure/: logging.py  results_repository.py
robot/: lbr_iiwa.py
scripts/: compare_runs.py  export_metrics.py  run_base_protocol.py  run_experimental_suite.py  run_main_simulation.py  validate_configs.py
sim/: __init__.py
sim/coppelia_sim/: external_object.py  sim_object.py
sim/pyplot/: sim_object.py
src/manipulator_framework/: __init__.py
src/manipulator_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README.md  conftest.py
tests/contract/: test_aruco_adapter_contract.py  test_coppeliasim_camera_adapter_contract.py  test_coppeliasim_robot_adapter_contract.py  test_core_must_not_import_adapters.py  test_core_must_not_import_ros.py  test_core_types_must_not_import_external_libs.py  test_execution_engine_contract.py  test_pyplot_robot_adapter_contract.py  test_yolo_adapter_contract.py
tests/fixtures/: application_fakes.py
tests/integration/: test_app_entrypoints_integration.py  test_execution_engine_and_use_case_alignment.py  test_full_pipeline.py  test_metrics_persistence.py  test_minimal_reality_integration.py  test_scientific_pipeline.py  test_use_case_with_config_and_persistence.py
tests/regression/: README.md  test_control_regression.py  test_joint_controller_regression.py  test_pbvs_regression.py  test_pbvs_with_avoidance_regression.py  test_planning_regression.py  test_quintic_trajectory_regression.py  test_visual_servoing_regression.py
tests/unit/: test_adaptive_joint_pd_controller.py  test_avoidance_costs.py  test_benchmark_controllers_use_case.py  test_benchmark_pd_vs_adaptive.py  test_control_metrics.py  test_cuckoo_search_avoidance.py  test_execution_contract_alignment.py  test_execution_engine.py  test_experiment_protocol.py  (+21 more)
utils/: __init__.py  formatter.py  pose.py  timer.py  units.py
(+372 files in other folders)
