[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manipulator-framework"
version = "0.1.0"
description = "Scientific robotics framework for visual servoing, perception, tracking and obstacle avoidance."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Silvia Nakamura" }
]
dependencies = [
  "numpy>=1.26",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

lint = [
  "mypy>=1.8",
  "ruff>=0.5",
]

dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.8",
  "ruff>=0.5",
]

robotics = [
  "roboticstoolbox-python>=1.1.0",
  "spatialmath-python>=1.1.13",
]

vision = [
  "opencv-contrib-python>=4.10.0",
]

yolo = [
  "ultralytics>=8.3.0",
]

full = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.8",
  "ruff>=0.5",
  "roboticstoolbox-python>=1.1.0",
  "spatialmath-python>=1.1.13",
  "opencv-contrib-python>=4.10.0",
  "ultralytics>=8.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
